--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/quincy-soeliman/weather-app#readme",
   "devDependencies": {
     "angular": "^1.5.0",
+    "angular-ui-router": "^0.2.18",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
