--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "ionic": "^1.7.14",
+    "jquery": "^2.2.2",
     "scss": "^0.2.4"
   }
 }
